src/main/java/umg/edu/antlr/js/JavaScriptParser.java
// Generated from C:/Code/Projects/Java/CompiladorMultilenguaje/src/main/java/umg/edu/antlr/js/JavaScriptParser.g4 by ANTLR 4.13.2
package umg.edu.antlr.js;

    import java.util.*;
    import umg.edu.symboltable.*;
    import umg.edu.error.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JavaScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BREAK=1, CASE=2, CATCH=3, CLASS=4, CONST=5, CONTINUE=6, DEBUGGER=7, DEFAULT=8, 
		DELETE=9, DO=10, ELSE=11, EXPORT=12, EXTENDS=13, FINALLY=14, FOR=15, FUNCTION=16, 
		IF=17, IMPORT=18, IN=19, INSTANCEOF=20, LET=21, NEW=22, RETURN=23, SUPER=24, 
		SWITCH=25, THIS=26, THROW=27, TRY=28, TYPEOF=29, VAR=30, VOID=31, WHILE=32, 
		WITH=33, YIELD=34, ASYNC=35, AWAIT=36, FROM=37, OF=38, STATIC=39, TRUE=40, 
		FALSE=41, NULL=42, UNDEFINED=43, ASSIGN=44, PLUS_ASSIGN=45, MINUS_ASSIGN=46, 
		MULT_ASSIGN=47, DIV_ASSIGN=48, MOD_ASSIGN=49, POWER_ASSIGN=50, LEFT_SHIFT_ASSIGN=51, 
		RIGHT_SHIFT_ASSIGN=52, UNSIGNED_RIGHT_SHIFT_ASSIGN=53, BIT_AND_ASSIGN=54, 
		BIT_OR_ASSIGN=55, BIT_XOR_ASSIGN=56, PLUS=57, MINUS=58, MULT=59, DIV=60, 
		MOD=61, POWER=62, INCREMENT=63, DECREMENT=64, EQ=65, STRICT_EQ=66, NE=67, 
		STRICT_NE=68, LT=69, LE=70, GT=71, GE=72, AND=73, OR=74, NOT=75, BIT_AND=76, 
		BIT_OR=77, BIT_XOR=78, BIT_NOT=79, LEFT_SHIFT=80, RIGHT_SHIFT=81, UNSIGNED_RIGHT_SHIFT=82, 
		ARROW=83, TEMPLATE_STRING_START=84, SEMICOLON=85, COMMA=86, DOT=87, QUESTION=88, 
		COLON=89, OPTIONAL_CHAINING=90, NULLISH_COALESCING=91, LPAREN=92, RPAREN=93, 
		LBRACE=94, RBRACE=95, LBRACKET=96, RBRACKET=97, NUMBER_LITERAL=98, STRING_LITERAL=99, 
		REGEX_LITERAL=100, IDENTIFIER=101, LINE_COMMENT=102, BLOCK_COMMENT=103, 
		WS=104, TEMPLATE_STRING_END=105, TEMPLATE_EXPRESSION_START=106, TEMPLATE_STRING_PART=107;
	public static final int
		RULE_program = 0, RULE_sourceElement = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_variableStatement = 4, RULE_variableDeclaration = 5, RULE_expressionStatement = 6, 
		RULE_ifStatement = 7, RULE_iterationStatement = 8, RULE_continueStatement = 9, 
		RULE_breakStatement = 10, RULE_returnStatement = 11, RULE_switchStatement = 12, 
		RULE_caseClause = 13, RULE_defaultClause = 14, RULE_throwStatement = 15, 
		RULE_tryStatement = 16, RULE_catchProduction = 17, RULE_finallyProduction = 18, 
		RULE_debuggerStatement = 19, RULE_functionDeclaration = 20, RULE_formalParameterList = 21, 
		RULE_formalParameter = 22, RULE_classDeclaration = 23, RULE_classElement = 24, 
		RULE_methodDefinition = 25, RULE_expression = 26, RULE_assignmentExpression = 27, 
		RULE_arrowFunction = 28, RULE_assignmentOperator = 29, RULE_conditionalExpression = 30, 
		RULE_binaryExpression = 31, RULE_unaryExpression = 32, RULE_postfixExpression = 33, 
		RULE_leftHandSideExpression = 34, RULE_newExpression = 35, RULE_memberExpression = 36, 
		RULE_callExpression = 37, RULE_arguments = 38, RULE_argumentList = 39, 
		RULE_primaryExpression = 40, RULE_functionExpression = 41, RULE_arrayLiteral = 42, 
		RULE_objectLiteral = 43, RULE_propertyAssignment = 44, RULE_propertyName = 45, 
		RULE_literal = 46, RULE_templateLiteral = 47, RULE_templateElement = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sourceElement", "statement", "block", "variableStatement", 
			"variableDeclaration", "expressionStatement", "ifStatement", "iterationStatement", 
			"continueStatement", "breakStatement", "returnStatement", "switchStatement", 
			"caseClause", "defaultClause", "throwStatement", "tryStatement", "catchProduction", 
			"finallyProduction", "debuggerStatement", "functionDeclaration", "formalParameterList", 
			"formalParameter", "classDeclaration", "classElement", "methodDefinition", 
			"expression", "assignmentExpression", "arrowFunction", "assignmentOperator", 
			"conditionalExpression", "binaryExpression", "unaryExpression", "postfixExpression", 
			"leftHandSideExpression", "newExpression", "memberExpression", "callExpression", 
			"arguments", "argumentList", "primaryExpression", "functionExpression", 
			"arrayLiteral", "objectLiteral", "propertyAssignment", "propertyName", 
			"literal", "templateLiteral", "templateElement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'break'", "'case'", "'catch'", "'class'", "'const'", "'continue'", 
			"'debugger'", "'default'", "'delete'", "'do'", "'else'", "'export'", 
			"'extends'", "'finally'", "'for'", "'function'", "'if'", "'import'", 
			"'in'", "'instanceof'", "'let'", "'new'", "'return'", "'super'", "'switch'", 
			"'this'", "'throw'", "'try'", "'typeof'", "'var'", "'void'", "'while'", 
			"'with'", "'yield'", "'async'", "'await'", "'from'", "'of'", "'static'", 
			"'true'", "'false'", "'null'", "'undefined'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'**='", "'<<='", "'>>='", "'>>>='", "'&='", 
			"'|='", "'^='", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'++'", "'--'", 
			"'=='", "'==='", "'!='", "'!=='", "'<'", "'<='", "'>'", "'>='", "'&&'", 
			"'||'", "'!'", "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'>>>'", "'=>'", 
			null, "';'", "','", "'.'", "'?'", "':'", "'?.'", "'??'", "'('", "')'", 
			"'{'", "'}'", "'['", "']'", null, null, null, null, null, null, null, 
			null, "'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BREAK", "CASE", "CATCH", "CLASS", "CONST", "CONTINUE", "DEBUGGER", 
			"DEFAULT", "DELETE", "DO", "ELSE", "EXPORT", "EXTENDS", "FINALLY", "FOR", 
			"FUNCTION", "IF", "IMPORT", "IN", "INSTANCEOF", "LET", "NEW", "RETURN", 
			"SUPER", "SWITCH", "THIS", "THROW", "TRY", "TYPEOF", "VAR", "VOID", "WHILE", 
			"WITH", "YIELD", "ASYNC", "AWAIT", "FROM", "OF", "STATIC", "TRUE", "FALSE", 
			"NULL", "UNDEFINED", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", 
			"DIV_ASSIGN", "MOD_ASSIGN", "POWER_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", 
			"UNSIGNED_RIGHT_SHIFT_ASSIGN", "BIT_AND_ASSIGN", "BIT_OR_ASSIGN", "BIT_XOR_ASSIGN", 
			"PLUS", "MINUS", "MULT", "DIV", "MOD", "POWER", "INCREMENT", "DECREMENT", 
			"EQ", "STRICT_EQ", "NE", "STRICT_NE", "LT", "LE", "GT", "GE", "AND", 
			"OR", "NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "LEFT_SHIFT", 
			"RIGHT_SHIFT", "UNSIGNED_RIGHT_SHIFT", "ARROW", "TEMPLATE_STRING_START", 
			"SEMICOLON", "COMMA", "DOT", "QUESTION", "COLON", "OPTIONAL_CHAINING", 
			"NULLISH_COALESCING", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
			"RBRACKET", "NUMBER_LITERAL", "STRING_LITERAL", "REGEX_LITERAL", "IDENTIFIER", 
			"LINE_COMMENT", "BLOCK_COMMENT", "WS", "TEMPLATE_STRING_END", "TEMPLATE_EXPRESSION_START", 
			"TEMPLATE_STRING_PART"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private SymbolTable symbolTable = new SymbolTable();
	    private ErrorTable errorTable = new ErrorTable();
	    private Set<String> declaredVariables = new HashSet<>();
	    
	    public SymbolTable getSymbolTable() { return symbolTable; }
	    public ErrorTable getErrorTable() { return errorTable; }
	    
	    private void addSymbol(String name, String type, int line, int column) {
	        Symbol symbol = new Symbol(name, type, "global", null, line, column);
	        symbolTable.addSymbol(symbol);
	    }
	    
	    private void addError(String message, int line, int column, String type) {
	        CompilationError.ErrorType errorType = CompilationError.ErrorType.SEMANTIC;
	        if ("LEXICAL".equals(type)) {
	            errorType = CompilationError.ErrorType.LEXICAL;
	        } else if ("SYNTACTIC".equals(type)) {
	            errorType = CompilationError.ErrorType.SYNTACTIC;
	        }
	        CompilationError error = new CompilationError(errorType, message, line, column, "");
	        errorTable.addError(error);
	    }
	    
	    private void checkVariableDeclaration(String varName, int line, int column) {
	        if (declaredVariables.contains(varName)) {
	            addError("Variable '" + varName + "' already declared", line, column, "SEMANTIC");
	        } else {
	            declaredVariables.add(varName);
	        }
	    }
	    
	    private void checkVariableUsage(String varName, int line, int column) {
	        if (!declaredVariables.contains(varName)) {
	            addError("Variable '" + varName + "' used before declaration", line, column, "SEMANTIC");
	        }
	    }

	public JavaScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JavaScriptParser.EOF, 0); }
		public List<SourceElementContext> sourceElement() {
			return getRuleContexts(SourceElementContext.class);
		}
		public SourceElementContext sourceElement(int i) {
			return getRuleContext(SourceElementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaScriptParserVisitor ) return ((JavaScriptParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -8791018664395307278L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 263336265729L) != 0)) {
				{
				{
				setState(98);
				sourceElement();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceElementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public SourceElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).enterSourceElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).exitSourceElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaScriptParserVisitor ) return ((JavaScriptParserVisitor<? extends T>)visitor).visitSourceElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceElementContext sourceElement() throws RecognitionException {
		SourceElementContext _localctx = new SourceElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceElement);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				functionDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				classDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IterationStatementContext iterationStatement() {
			return getRuleContext(IterationStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public ThrowStatementContext throwStatement() {
			return getRuleContext(ThrowStatementContext.class,0);
		}
		public TryStatementContext tryStatement() {
			return getRuleContext(TryStatementContext.class,0);
		}
		public DebuggerStatementContext debuggerStatement() {
			return getRuleContext(DebuggerStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaScriptParserVisitor ) return ((JavaScriptParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				variableStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				expressionStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				ifStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				iterationStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				continueStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(117);
				breakStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(118);
				returnStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(119);
				switchStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(120);
				throwStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(121);
				tryStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(122);
				debuggerStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(JavaScriptParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JavaScriptParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaScriptParserListener ) ((JavaScriptParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaScriptParserVisitor ) return ((JavaScriptParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(LBRACE);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -8791018664395307294L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 263336265729L) != 0)) {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
